--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="pro-wrap__con__subttl">
                 <h3>難しすぎる</h3>
               </div>
-              <svg xmlns="http://www.w3.org/2000/svg" width="80" height="0" viewBox="0 0 24 24">
+              <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24">
                 <path fill=#616BFF
                   d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z" />
               </svg>
@@ -332,7 +332,7 @@
             <details class="accordion">
               <summary><span>Q.</span>無料トライアル後はどうなりますか？</summary>
               <p>無料トライアル期間が終了すると全機能が使用できなくなります。<br>
-              有料プランをご契約いただいた場合はIDをご入力いただくと内容を引き継いでご利用いただけます。</p>
+              有料プランをご契約いただいた場合はIDをご入力いただくと内容を引き継いでご利用いただけます</p>
             </details>
             <details class="accordion">
               <summary><span>Q.</span>容量制限はありますか？</summary>
